fixed more issues,div collapse solved

--- a/style2.css
+++ b/style2.css
@@ -1,8 +1,8 @@
 /*style2.css second experiment*/
 
 body {
-  font-family: Arial,serif;
-  font-size:15px;
+  font-family:Verdana,Arial,sans-serif;
+  font-size:1.2em;
   line-height: 1.5em;
   padding:0px;
   margin:0px;
@@ -30,8 +30,14 @@ body {
   .allcontent{
     background: url('images/blur.jpg') no-repeat;
     background-size: cover;
-    min-height:1000px;
-  }
+    /*min-height:1000px;*/
+    }
+
+    .allcontent{
+      content: "";
+      clear: both;
+      display: table;
+    }
 /*Header style begins*/
 
 header,footer {
@@ -39,13 +45,13 @@ header,footer {
   background-color : #35424a;
   /*margin:0px;*/
   padding-top:30px;
-  min-height:70px;
+  /*min-height:70px;*/
   /*border-bottom: 0.5px black solid;*/
 
   color: #ffffff;
   border-bottom:#e8491d 3px solid;
   float: left;
-  clear:both;
+
   width:100%;
 }
 
@@ -99,11 +105,11 @@ header nav{
 
 /*Header style ends*/
 footer{
-  position: relative;
+  /*position: relative;
   bottom: 0px;
-  left: 0px;
+  left: 0px;*/
   width:100%;
-
+  float: left;
 }
 footer h6{
   text-align: center;
@@ -166,7 +172,7 @@ button{
 
 @media only screen and (max-width:768px) {
   body{
-    font-size: 9px;
+    font-size: 1em;
   }
 
   h1{
@@ -177,17 +183,22 @@ button{
       width: 100%;
   }
   .allcontent{
-    min-height:1500px;
+    /*min-height:1500px;*/
     width:100%;
 
   }
 /*header styles*/
   #head{
-    padding-top: 15px;
+    padding-top: 10px;
   }
 
   div#logo{
     margin-bottom: 15px;
+  }
+  nav{
+    float: left;
+    width: 100%;
+    margin: 0px;
   }
 
   header li{
@@ -195,20 +206,31 @@ button{
     width: 100%;
     text-align: center;
     font-size:50px;
-    padding:0px;
+    padding:10px;
     margin-bottom:5px;
     border-bottom:3px #e8491d solid;
     padding-bottom: 5px;
   }
+
+  li.top {
+    margin-bottom: 0px;
+    padding-bottom: 10px;
+  }
    li.bottom{
     border-bottom:none;
-    padding-bottom:0px;
+    padding-bottom:10px;
   }
   header nav{
     padding-top:0px;
     margin: 0px;
-    float: none;
-    clear: none;
+    float: left;
+    width: 100%;
+  }
+
+  header nav ul{
+    float: left;
+    width: 100%;
+    margin: 0px;
   }
   header{
     padding-top: 0px;
@@ -234,6 +256,12 @@ section#form{
 }
 .sidebar{
   width:99%;
+  margin: 5px;
+}
+.sidebar-box{
+  width: 45%;
+  float: left;
+  padding: 10px;
 }
 
 input,button{
